<resources>
    <string name="app_name">CarBom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to login -->
    <string name="get_location_btn">Habilitar localização</string>
    <string name="location_text">Localização</string>
    <string name="get_location_dsc">Para uma experiência completa, pedimos para habilitar o serviço de localização </string>
    <string name="advance">Próximo</string>

    <!-- Strings related to Mechanics -->
    <string name="near_by_mechanics">Mêcanicas próximas</string>
    <string name="search_input">Buscar mecânica</string>
    <string name="mechanics">Mecânicas</string>
    <string name="filter_painting">Tinturaria</string>
    <string name="filter_parts">Peças</string>
    <string name="filter_fix">Conserto</string>
    <string name="filter_general_services">Serviços em Geral</string>
    <string name="not_found">Nenhum valor foi encontrado para sua busca</string>

    <!-- Strings related to Mechanics Cell -->
    <string name="default_mechanic">Mecânica 1</string>
    <string name="default_mechanic_near"> %1$s 🌟 – %2$s Km</string>
    <string name="default_mechanic_first_tag">Conserto</string>
    <string name="default_mechanic_second_tag">Funilaria</string>
    <string name="default_mechanic_description"> “Mecânica fundada há mais de 10 anos na cidade de São Paulo no bairro Vila Madalena. Somos especializados em serviços gerais e funilaria. Oferecemos um serviço de qualidade e por um ótimo preço. Faça já a sua avaliação!”</string>

    <!-- Strings related to Services -->
    <string name="price"> %1$s - R$ %2$s </string>
    <string name="user_name">Nome do Usuario</string>
    <string name="chats">Chats</string>
    <string name="chats_description">Minhas conversas</string>
    <string name="notification">Notificações</string>
    <string name="notification_description">Minha central de notificação</string>
    <string name="payment">Pagamento</string>
    <string name="payment_description">Meu saldo e QR Code</string>
    <string name="voucher">Cupons</string>
    <string name="voucher_description">Meus cupons de desconto</string>
    <string name="favorite">Favoritos</string>
    <string name="favorite_description">Meus locais favoritos</string>
    <string name="help">Ajuda</string>
    <string name="settings">Configurações</string>
    <string name="security">Segurança</string>
    <string name="suggest">Sugerir Mecânica</string>

    <!-- Strings related to Still Working-->
    <string name="still_working">Opa, estamos trabalhando nessa página. Por favor, volte mais tarde.</string>
    <string name="title_activity_mechanics_details">MechanicsDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>