<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GetLocation"
    android:background="@color/gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_text"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            android:id="@+id/lon"
            android:layout_marginBottom="30dp"/>


        <ImageView
            android:layout_below="@id/lon"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:src="@drawable/my_location"
            android:id="@+id/location_img"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_img"
            android:text="@string/get_location_dsc"
            android:id="@+id/locationDsc"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="40dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationDsc"
            android:id="@+id/getLocationPlease"
            android:textSize="14sp"
            android:text="@string/get_location_btn"
            android:textColor="@color/gray"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/getLocationPlease"
            android:id="@+id/nextBtn"
            android:text="@string/advance"
            android:textColor="@color/white"
            android:backgroundTint="@color/input_gray"
            />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>