<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginVertical="4dp"
    app:cardBackgroundColor="@color/grayCard"
    android:layout_gravity = "center_horizontal"
    android:id="@+id/mechanic_card"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/gray">

            <ImageView
                android:id="@+id/mechanic_img"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo_carbom"
                android:scaleType="fitXY"
                />
        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/mechanic_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_mechanic"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_mechanic_near"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="13dp"
                >

                <com.google.android.material.chip.Chip
                    android:id="@+id/first_chip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/default_mechanic_first_tag"
                    android:layout_marginEnd="6dp"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/black"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/second_chip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/default_mechanic_second_tag"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/black"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.cardview.widget.CardView>