<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray"
    android:id="@+id/fragmentOptions"
    tools:context=".presentation.Options">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="CarBão"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image2"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_mechanics_default" />
        </RelativeLayout>

        <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:id="@+id/relativeChats"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <ImageView
                android:id="@+id/icChats"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:contentDescription="TODO"
                android:clickable="false"
                android:focusable="false"
                app:srcCompat="@drawable/ic_chat" />


            <LinearLayout
                android:id="@+id/linearTextChats"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="false"
                android:focusable="false"
                android:layout_toEndOf="@+id/icChats"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/mechanic_option_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/chats"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/info_option_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/chats_description"
                    android:textColor="@color/input_gray"
                    android:textSize="14sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/icChatsDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/linearTextChats"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/grayBottom"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/relativeNotifications"
            >

            <ImageView
                android:id="@+id/icNotification"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/ic_add_alert" />


            <LinearLayout
                android:id="@+id/linearTextNotification"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/icNotification"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notification_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/notification"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/notificationDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/notification_description"
                    android:textColor="@color/input_gray"
                    android:textSize="14sp" />


            </LinearLayout>

            <ImageView
                android:id="@+id/icNotificationDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/linearTextNotification"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/grayBottom"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/relativePayment"
            >

            <ImageView
                android:id="@+id/icPayment"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/ic_payment" />


            <LinearLayout
                android:id="@+id/linearTextPayment"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/icPayment"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/payment"
                    android:textSize="18sp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/paymentDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:text="@string/payment_description"
                    android:textColor="@color/input_gray" />


            </LinearLayout>

            <ImageView
                android:id="@+id/icPaymentDetails"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/linearTextPayment"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/grayBottom"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/relativeVoucher"
            >

            <ImageView
                android:id="@+id/icVoucher"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginEnd="25dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/ic_card_giftcard" />


            <LinearLayout
                android:id="@+id/linearTextVoucher"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/icVoucher"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/voucher_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/voucher"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/voucherDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:text="@string/voucher_description"
                    android:textColor="@color/input_gray" />


            </LinearLayout>

            <ImageView
                android:id="@+id/icVoucherDetails"
                android:clickable="false"
                android:focusable="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/linearTextVoucher"
                app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/grayBottom"/>
    </LinearLayout>
</FrameLayout>